# firedpy

./: .Rhistory  .gitignore  .travis.yml  .~lock.firedpy_master_spreadsheet.csv#  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  FIRED_CONUS_Daily_README.txt  LICENSE  README.md  __init__.py  __main__.py  arguments.py  entry.sh  entrypoint.sh  environment.yaml  environment.yml  figures_for_data_paper.R  fired_italy_README.txt  firedpy_master_spreadsheet.csv  functions.py  gpkg_to_shp.R  how-to-docker.txt  installation_notes.md  map_figure.R  modis_grid_world.gpkg  modis_map.qgz  modis_map_robinson.qgz  process_all_countries.py  pyproject.toml  requirements.txt  requirements.yaml  run_firedpy_batch.sh  setup.py
.eggs/: bs4-0.0.1-py3.7.egg  munch-2.3.2-py3.7.egg
.github/: pull_request_template_config.yml  pull_request_template_major.md  pull_request_template_minor.md
R/: data_paper_figures_and_table1.R  fix_daily.R  fixing_offset.R  gpkg_to_shp.R  map_figure.R  map_figure_for_github_readme.R  reburns.R
__MACOSX/: ._fired_italy_README.txt  ._fired_italy_to2021182_daily.gpkg  ._fired_italy_to2021182_events.gpkg
data/: params.txt
data_paper_files/: .~lock.firedpy_data_paper_track_changes_final.docx#  figures_for_data_paper.R  firedpy_master_spreadsheet.xlsx  moonshine_sour_fired.gpkg  moonshine_sour_fired_t5s1.gpkg  moonshine_sour_gfa.gpkg  moonshine_sour_mtbs.gpkg  mtbs_comparison.csv  rim_daily.gpkg  rim_fire.gpkg  rim_fired.gpkg  rim_gfa.gpkg  rim_mtbs.gpkg  supplementary_table_S1.xlsx
docs/: index.html
firedpy/: MCD12Q1_LegendDesc_Type1.csv  MCD12Q1_LegendDesc_Type2.csv  MCD12Q1_LegendDesc_Type3.csv  MCD12Q1_LegendDesc_Type4.csv  MCD12Q1_LegendDesc_Type5.csv  __init__.py  __main__.py  arguments.py  classification.py  cli.py  create_readme.py  data_classes.py  enums.py  firedpy.py  firespeed.py  functions.py  (+11 more)
firedpy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+1056 files in other folders)
