[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=60.2.0"
]

[project]
name = "firedpy"
dynamic = ["version", "dependencies"]
description = "The Fire Event Delineation Model Python Package"
readme = "README.md"
authors = [{name="Adam Mahood"}]
license = "MIT"
keywords = ["FIRED", "firedpy", "fire", "wildfire"]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

[tool.setuptools.dynamic]
version = {attr = "firedpy.__version__"}

[tool.setuptools.package-data]
firedpy = ["data/*"]
